src/styles/pages/about.css
* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

/*Contact Cards*/
.profile-card {
	display: grid;
	grid-template-columns: 1fr;
	gap: 20px;
	margin: 40px 20px;
	align-items: start;
}

.profile-pic img {
	width: 100%;
	max-width: 300px;
	height: auto;
	display: block;
	margin: 0 auto;
	border: 15px solid #1ab369;
	border-radius: 15px;
	box-shadow: 5px 5px 10px slategray;
}

.profile-header,
.card-content,
.profile-contact {
	text-align: center;
}

i {
	font-size: 30px;
}
.icon-box {
	display: flex;
	/* grid-template-columns: 1fr 1fr 1fr;
	gap: 10px; */
}
a {
	background-color: rgba(255, 248, 232, 0.96);
	border-radius: 50%;
	margin-top: 10px;
}

h3 {
	margin-bottom: 15px;
}

/* .profile-card {
  box-shadow: 5px 5px 10px #6f7364;
  max-width: 300px;
  margin: auto;
  margin-top: 50px;
  padding: 50px;
  display: grid;
  align-items: center;
  text-align: center;
  font-family: arial;
  background: #bcd631;
  border-radius: 30px;
	text-align: center;
	grid-column: 1/2;
	grid-row: 1/4;
} */


/* Testimonials Section */
hr {
	width: 90%;
	height: 2px;
	margin: 0 auto;
	background: black;
	color: black;
	border: 0;
}

#testimonials {
	padding: 30px 5%;
}

#testimonials h1 {
	font-family: var(--heading-font);
	font-size: 48px;
	margin: 0;
}

#testimonials > p {
	font-family: var(--paragraph-font);
	text-align: center;
	margin-bottom: 40px;
}

.testimonial-card {
	background-color: #1ab369;
	border-radius: 30px;
	padding: 20px 30px;
	margin: 20px 0;
}

.testimonial-card h2 {
	display: inline;
	margin: 10px 5px 10px 30px;
	font-family: var(--heading-font);
	font-size: 1.5em;
}

.testimonial-card h3 {
	display: inline;
	margin: 0;
	font-family: var(--heading-font);
	font-size: 1.3em;
	font-weight: 450;
}

.testimonial-card p {
	text-indent: 2em;
	font-family: var(--paragraph-font);
}

@media screen and (min-width: 768px) {
	.profile-card {
		grid-template-columns: 320px 1fr;
		gap: 40px;
		margin: 60px 80px;
	}

	.profile-pic {
		grid-column: 1;
		grid-row: 1 / 4;
	}

	.profile-header,
	.card-content,
	.profile-contact {
		grid-column: 2;
		text-align: left;
	}
}

